[package]
name = "aequitas"
version = "0.1.0"
authors = ["苏向夜 <fu050409@163.com>"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
debug = ["console_error_panic_hook", "wasm-bindgen-test"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen-test = { version = "0.3.34", optional = true }

js-sys = "0.3.70"
rayon = { version = "1.10.0", features = ["web_spin_lock"] }
dlmalloc = { version = "0.2.8", features = ["global"] }
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.25"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
strip = true
lto = true
panic = "abort"
codegen-units = 1
